--- a/MyPaint/MyPaint.vcxproj.filters
+++ b/MyPaint/MyPaint.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="CMyPaintLinePropertiesDialog.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="CMyPaintListViewDialog.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyPaint.cpp">
@@ -114,6 +117,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="CMyPaintLinePropertiesDialog.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="CMyPaintListViewDialog.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
