--- a/MyPaint/MyPaint.vcxproj.filters
+++ b/MyPaint/MyPaint.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="CMyPaintListViewDialog.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="CMyPaintLine.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyPaint.cpp">
@@ -120,6 +123,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="CMyPaintListViewDialog.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="CMyPaintLine.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
