--- a/MyPaint/MyPaint.vcxproj
+++ b/MyPaint/MyPaint.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="CMyPaintConnection.h" />
     <ClInclude Include="CMyPaintEllipse.h" />
     <ClInclude Include="CMyPaintFigure.h" />
+    <ClInclude Include="CMyPaintLine.h" />
     <ClInclude Include="CMyPaintLinePropertiesDialog.h" />
     <ClInclude Include="CMyPaintListViewDialog.h" />
     <ClInclude Include="CMyPaintPenStyleDialog.h" />
@@ -212,6 +213,7 @@
     <ClCompile Include="CMyPaintConnection.cpp" />
     <ClCompile Include="CMyPaintEllipse.cpp" />
     <ClCompile Include="CMyPaintFigure.cpp" />
+    <ClCompile Include="CMyPaintLine.cpp" />
     <ClCompile Include="CMyPaintLinePropertiesDialog.cpp" />
     <ClCompile Include="CMyPaintListViewDialog.cpp" />
     <ClCompile Include="CMyPaintPenStyleDialog.cpp" />
