--- a/MyPaint/MyPaint.rc
+++ b/MyPaint/MyPaint.rc
@@ -125,19 +125,19 @@ IDR_MENU1 MENU
 BEGIN
     POPUP "ContextMenu"
     BEGIN
-        MENUITEM "Delete",                      ID_CONTEXTMENU_DELETE
-        MENUITEM "Rotate",                      ID_CONTEXTMENU_ROTATE
-        MENUITEM "Edit",                        ID_CONTEXTMENU_EDIT
-        MENUITEM "Normalize",                   ID_CONTEXTMENU_NORMALIZE
-        POPUP "Connect"
+        MENUITEM "Удалить",                     ID_CONTEXTMENU_DELETE
+        MENUITEM "Повернуть",                   ID_CONTEXTMENU_ROTATE
+        MENUITEM "Изменить",                    ID_CONTEXTMENU_EDIT
+        MENUITEM "Нормализовать",               ID_CONTEXTMENU_NORMALIZE
+        POPUP "Соединить"
         BEGIN
-            MENUITEM "Line",                        ID_CONNECT_LINE
-            MENUITEM "Right arrow",                 ID_CONNECT_RIGHTARROW
-            MENUITEM "Left arrow",                  ID_CONNECT_LEFTARROW
-            MENUITEM "Biderectional arrow",         ID_CONNECT_BIDERECTIONALARROW
+            MENUITEM "Линия",                       ID_CONNECT_LINE
+            MENUITEM "Стрелка вправо",              ID_CONNECT_RIGHTARROW
+            MENUITEM "Стрелка влево",               ID_CONNECT_LEFTARROW
+            MENUITEM "Двунапрвленная стрелка",      ID_CONNECT_BIDERECTIONALARROW
         END
         MENUITEM SEPARATOR
-        MENUITEM "Properties",                  ID_CONTEXTMENU_PROPERTIES
+        MENUITEM "Свойства",                    ID_CONTEXTMENU_PROPERTIES
     END
 END
 
@@ -145,9 +145,9 @@ IDR_MENU2 MENU
 BEGIN
     POPUP "lineMenu"
     BEGIN
-        MENUITEM "Delete",                      ID_LINEMENU_DELETE
+        MENUITEM "Удалить",                     ID_LINEMENU_DELETE
         MENUITEM SEPARATOR
-        MENUITEM "Properties",                  ID_LINEMENU_PROPERTIES
+        MENUITEM "Свойства",                    ID_LINEMENU_PROPERTIES
     END
 END
 
@@ -159,20 +159,31 @@ END
 
 IDR_MAINFRAME ACCELERATORS
 BEGIN
-    "N",            ID_FILE_NEW,            VIRTKEY, CONTROL
-    "O",            ID_FILE_OPEN,           VIRTKEY, CONTROL
-    "S",            ID_FILE_SAVE,           VIRTKEY, CONTROL
-    "P",            ID_FILE_PRINT,          VIRTKEY, CONTROL
-    "Z",            ID_EDIT_UNDO,           VIRTKEY, CONTROL
-    "X",            ID_EDIT_CUT,            VIRTKEY, CONTROL
-    "C",            ID_EDIT_COPY,           VIRTKEY, CONTROL
-    "V",            ID_EDIT_PASTE,          VIRTKEY, CONTROL
-    VK_BACK,        ID_EDIT_UNDO,           VIRTKEY, ALT
-    VK_DELETE,      ID_EDIT_CUT,            VIRTKEY, SHIFT
-    VK_INSERT,      ID_EDIT_COPY,           VIRTKEY, CONTROL
-    VK_INSERT,      ID_EDIT_PASTE,          VIRTKEY, SHIFT
-    VK_F6,          ID_NEXT_PANE,           VIRTKEY 
-    VK_F6,          ID_PREV_PANE,           VIRTKEY, SHIFT
+    "C",            ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
+    VK_INSERT,      ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
+    VK_DELETE,      ID_EDIT_CUT,            VIRTKEY, SHIFT, NOINVERT
+    "X",            ID_EDIT_CUT,            VIRTKEY, CONTROL, NOINVERT
+    "V",            ID_EDIT_PASTE,          VIRTKEY, CONTROL, NOINVERT
+    VK_INSERT,      ID_EDIT_PASTE,          VIRTKEY, SHIFT, NOINVERT
+    VK_BACK,        ID_EDIT_UNDO,           VIRTKEY, ALT, NOINVERT
+    "Z",            ID_EDIT_UNDO,           VIRTKEY, CONTROL, NOINVERT
+    "N",            ID_FILE_NEW,            VIRTKEY, CONTROL, NOINVERT
+    "O",            ID_FILE_OPEN,           VIRTKEY, CONTROL, NOINVERT
+    "P",            ID_FILE_PRINT,          VIRTKEY, CONTROL, NOINVERT
+    "S",            ID_FILE_SAVE,           VIRTKEY, CONTROL, NOINVERT
+    VK_F6,          ID_NEXT_PANE,           VIRTKEY, NOINVERT
+    VK_F6,          ID_PREV_PANE,           VIRTKEY, SHIFT, NOINVERT
+    VK_RETURN,      ID_ACCELERATOR32804,    VIRTKEY, NOINVERT
+    "L",            ID_LINE,                VIRTKEY, CONTROL, NOINVERT
+    "E",            ID_ELLIPSE,             VIRTKEY, CONTROL, NOINVERT
+    "R",            ID_RECT,                VIRTKEY, CONTROL, NOINVERT
+    "T",            ID_TRIANGLE,            VIRTKEY, CONTROL, NOINVERT
+    "V",            ID_LISTVIEW,            VIRTKEY, ALT, NOINVERT
+    "W",            ID_WIDTH,               VIRTKEY, ALT, NOINVERT
+    "S",            ID_PEN_STYLE,           VIRTKEY, ALT, NOINVERT
+    "P",            ID_PEN_COLOR,           VIRTKEY, ALT, NOINVERT
+    "T",            ID_BRUSH_STYLE,         VIRTKEY, ALT, NOINVERT
+    "B",            ID_BRUSH_COLOR,         VIRTKEY, ALT, NOINVERT
 END
 
 
@@ -186,9 +197,9 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "О MyPaint"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    ICON            IDR_MAINFRAME,IDC_STATIC,14,14,21,20
+    ICON            IDR_MAINFRAME,IDC_STATIC,14,14,20,20
     LTEXT           "MyPaint, версия 1.0",IDC_STATIC,42,14,114,8,SS_NOPREFIX
-    LTEXT           "(C) 2019 г.",IDC_STATIC,42,26,114,8
+    LTEXT           "(C) 2020 г.",IDC_STATIC,42,26,114,8
     DEFPUSHBUTTON   "ОК",IDOK,113,41,50,14,WS_GROUP
 END
 
@@ -306,15 +317,15 @@ VS_VERSION_INFO VERSIONINFO
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "041904B0"
+        BLOCK "041904b0"
         BEGIN
-            VALUE "CompanyName", "TODO: <название компании>"
+            VALUE "CompanyName", "Tsimafei Kinevich"
             VALUE "FileDescription", "MyPaint"
             VALUE "FileVersion", "1.0.0.1"
             VALUE "InternalName", "MyPaint.exe"
-            VALUE "LegalCopyright", "TODO: (c) <название компании>.  Все права защищены."
+            VALUE "LegalCopyright", "Tsimafei Kinevich.  Все права защищены."
             VALUE "OriginalFilename", "MyPaint.exe"
-            VALUE "ProductName", "TODO: <Название продукта>"
+            VALUE "ProductName", "MyPaint"
             VALUE "ProductVersion", "1.0.0.1"
         END
     END
@@ -438,6 +449,11 @@ BEGIN
 END
 
 IDD_DIALOG_LISTVIEW AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_ABOUTBOX AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
